toolchain/internal/core/analysis/testdata/errors/duplicates/enum_const_same_name.vdl
// @expect: E804

enum Limit {
  Low
}

const Limit = 10
